--- a/aula05.01_exercicio.html
+++ b/aula05.01_exercicio.html
@@ -8,12 +8,15 @@
 		<body>
 			<h1>Lógica de Programação com Javascript</h1>
 
-			<button onclick="mostrarAreaTotal()">mostrar área</button>
+			<button onclick="mostrarAreaAlert()">mostrar área num alert</button>
+			<button onclick="mostrarAreaOutput()">mostrar área no output</button>
+
+			<div id="output"></div>	
 
 			<script>
 				//Pedir para o usuário digitar dois números que representam os lados de um retângulo. Mostrar na tela a área total. Esse código deve ser executado quando a página é aberta e também quando clicar num botão. O que acontece se o usuário inserir um dado inválido?
 
-				function mostrarAreaTotal(l, a) {
+				function mostrarAreaAlert(l, a) {
 					var largura = prompt('digite a largura');
 					largura = parseFloat(largura);
 
@@ -28,7 +31,23 @@
 					alert('a área total é: ' + area);
 				}
 
-				mostrarAreaTotal();
+
+				function mostrarAreaOutput() {
+					var largura = prompt('digite a largura');
+					largura = parseFloat(largura);
+
+					var altura = prompt('digite a altura');
+					altura = parseFloat(altura);
+
+					try {
+						var area = calcularArea (largura, altura);
+					} catch(e) {
+						area = e;
+					}
+					document.querySelector('#output').innerHTML = 'a área total é: ' + area;
+				}
+
+				mostrarAreaAlert();
 
 				function calcularArea(l, a) {
 					if (l === undefined || a === undefined) {
