altera o preco por preço

--- a/aula06.03_aulaArrayDeObjetos.html
+++ b/aula06.03_aulaArrayDeObjetos.html
@@ -25,7 +25,7 @@
 				console.log(produtos[i].nome);
 
 				msg += "<h2>Produto: "+ produtos[i].nome +"</h2>";
-				msg += "<p>Preco: R$ "+ produtos[i].preco +"</p><br>";
+				msg += "<p>Preço: R$ "+ produtos[i].preco +"</p><br>";
 			}
 
 			document.querySelector('#output').innerHTML = msg;
