adiciona o <br> no document.querySelector

--- a/aula05.01_exercicio.html
+++ b/aula05.01_exercicio.html
@@ -44,7 +44,7 @@
 					} catch(e) {
 						area = e;
 					}
-					document.querySelector('#output').innerHTML = 'a área total é: ' + area;
+					document.querySelector('#output').innerHTML = '<br>' + 'a área total é: ' + area;
 				}
 
 				mostrarAreaAlert();
