inclui o comentário Memoização no código que trata este assunto

--- a/aula08.02_aulaFuncaoRecursivaParte2.html
+++ b/aula08.02_aulaFuncaoRecursivaParte2.html
@@ -48,6 +48,7 @@
 				//console.log(fibonacci2(60))
 				console.log('chamou2', chamou2)
 
+				//Memoização
 				function fibonacci3(n, cache) {
 					chamou3++;
 					cache = cache || {};
